Added Initial Ribbon Elements
Added two groups boxes, one for Reports and one for Estimates.  They contain one and two buttons, respectively.  For Report options, one button opens a SaveFileDialog and the other opens a FileDialog filtered for CSV files.  The FileDialog is the key feature of today's changes, since it retrieves the filepath to the field report.  The file path is handed over to the CSVDataService utility, which reads its contents into the ProgressReporter methods that will produce the report output.

Mike is currently working on the CSVDataService using the information we covered in yesterday's meeting.

--- a/Estimating.VSTO/Estimating.VSTO.csproj
+++ b/Estimating.VSTO/Estimating.VSTO.csproj
@@ -168,6 +168,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RibbonBudgetTab.resx">
+      <DependentUpon>RibbonBudgetTab.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Documentation\Use Cases of the Budget Tracking Tool.docx" />
     <None Include="Documentation\VSTOBudgetTracker.pdf" />
     <None Include="Estimating.VSTO_TemporaryKey.pfx" />
@@ -178,6 +181,12 @@
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="RibbonBudgetTab.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="RibbonBudgetTab.Designer.cs">
+      <DependentUpon>RibbonBudgetTab.cs</DependentUpon>
     </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
