Added CSV project

--- a/Estimating.CSVHandler/Estimating.CSVHandler.csproj
+++ b/Estimating.CSVHandler/Estimating.CSVHandler.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0DAD99EF-1DEF-491E-BAAE-2E8655640D7B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>DebuggerControl</RootNamespace>
-    <AssemblyName>DebuggerControl</AssemblyName>
+    <ProjectGuid>{37F21A16-E43A-42DC-8455-D3BD2FB2B2FA}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Estimating.CSVHandler</RootNamespace>
+    <AssemblyName>Estimating.CSVHandler</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,9 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=15.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.15.0.5\lib\net47\CsvHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,27 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="mainProgram.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CSVDataService.cs" />
+    <Compile Include="ICSVDataService.cs" />
+    <Compile Include="PhaseCodeRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="uSER.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Estimating.CSVHandler\Estimating.CSVHandler.csproj">
-      <Project>{37f21a16-e43a-42dc-8455-d3bd2fb2b2fa}</Project>
-      <Name>Estimating.CSVHandler</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Estimating.ProgressReporter\Estimating.ProgressReporter.csproj">
-      <Project>{ce3dee14-d281-4b45-8776-89cd04c644cb}</Project>
-      <Name>Estimating.ProgressReporter</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Estimating.PseudoDataLayer\Estimating.PseudoDataLayer.csproj">
-      <Project>{6ac66001-c76d-4895-8a91-4aaf94ebd554}</Project>
-      <Name>Estimating.PseudoDataLayer</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
